# Rust-Tax-app

./: Cargo.toml  README.md  main.rs
Income Devider.app/Contents/: Info.plist
Income Devider.app/Contents/Resources/: Income Devider.icns
